--- a/shoes_dealer/views/product_template_views.xml
+++ b/shoes_dealer/views/product_template_views.xml
@@ -189,7 +189,7 @@
     <record id="product_template_kanban_view_inh" model="ir.ui.view">
         <field name="name">product.template.kanban.view.inh</field>
         <field name="model">product.template</field>
-        <field name="type">kaban</field>
+        <field name="type">kanban</field>
         <field name="inherit_id" ref="product.product_template_kanban_view"/>
         <field name="priority">90</field>
         <field name="arch" type="xml">
