--- a/shoes_dealer/views/product_product_views.xml
+++ b/shoes_dealer/views/product_product_views.xml
@@ -28,6 +28,7 @@
                 <field name="product_tmpl_single_id"/>
                 <field name="product_tmpl_single_list_price"/>
             </xpath>
+            <!-- Da error al migrar a v17:
             <xpath expr="//ul" position="replace">
                 <ul t-if="!record.product_tmpl_single_id">
                     <li><strong>Price: <field name="lst_price"/></strong></li>
@@ -36,6 +37,7 @@
                     <li><strong>Price: <field name="product_tmpl_single_list_price"/></strong></li>
                 </ul>
             </xpath>
+            -->
         </field>
     </record>
 
