--- a/shoes_dealer/views/sale_order_line_views.xml
+++ b/shoes_dealer/views/sale_order_line_views.xml
@@ -73,7 +73,7 @@
         <field name="model">sale.order.line</field>
         <field name="active" eval="True"/>
         <field name="priority">99</field>
-        <field name="type">tree</field>
+        <field name="type">search</field>
     </record>
 
 
