--- a/shoes_dealer/views/product_product_views.xml
+++ b/shoes_dealer/views/product_product_views.xml
@@ -28,16 +28,16 @@
                 <field name="product_tmpl_single_id"/>
                 <field name="product_tmpl_single_list_price"/>
             </xpath>
-            <!-- Da error al migrar a v17:
-            <xpath expr="//ul" position="replace">
-                <ul t-if="!record.product_tmpl_single_id">
-                    <li><strong>Price: <field name="lst_price"/></strong></li>
-                </ul>
-                <ul t-else="">
-                    <li><strong>Price: <field name="product_tmpl_single_list_price"/></strong></li>
-                </ul>
+            <xpath expr="//div[@name='product_list_price']" position="replace">
+                <div name="product_lst_price" class="mt-1">
+                    <div t-if="!record.product_tmpl_single_id">
+                        Price: <field name="lst_price"/>
+                    </div>
+                    <div t-else="">
+                        Price: <field name="product_tmpl_single_list_price"/>
+                    </div>
+                </div>
             </xpath>
-            -->
         </field>
     </record>
 
