--- a/shoes_dealer/views/product_product_views.xml
+++ b/shoes_dealer/views/product_product_views.xml
@@ -28,7 +28,7 @@
                 <field name="product_tmpl_single_id"/>
                 <field name="product_tmpl_single_list_price"/>
             </xpath>
-            <xpath expr="//div[@name='product_list_price']" position="replace">
+            <xpath expr="//div[@name='product_lst_price']" position="replace">
                 <div name="product_lst_price" class="mt-1">
                     <div t-if="!record.product_tmpl_single_id">
                         Price: <field name="lst_price"/>
