--- a/shoes_dealer/views/product_attribute_value_views.xml
+++ b/shoes_dealer/views/product_attribute_value_views.xml
@@ -2,8 +2,8 @@
 <odoo>
 
     <!-- INH CUSTOM TREE VIEW (default form not required): -->
-    <record id="partner_product_attribute_value_inh_tree" model="ir.ui.view">
-        <field name="name">partner.attribute.inh.tree</field>
+    <record id="partner_product_manufacturer_value_inh_tree" model="ir.ui.view">
+        <field name="name">partner.attribute.manufacturer.inh.tree</field>
         <field name="model">product.attribute.value</field>
         <field name="inherit_id" ref="product.product_attribute_value_list"/>
         <field name="type">tree</field>
