--- a/shoes_dealer/views/product_template_views.xml
+++ b/shoes_dealer/views/product_template_views.xml
@@ -119,8 +119,19 @@
                 <field name="pairs_sold"/>
             </xpath>
 
+        </field>
+    </record>
+
+    <!-- VISTA SOLO PT PARA AMPLIAR FUNCIONALIDAD partner_product_attribute_value CON TIPO DE MATERIAL: -->
+    <record id="product_template_only_shoes_dealer_inh_form" model="ir.ui.view">
+        <field name="name">product.template.only.shoes.dealer.inh.form</field>
+        <field name="model">product.template</field>
+        <field name="type">form</field>
+        <field name="inherit_id" ref="product_partner_pav_inh_form_view"/>
+        <field name="priority">90</field>
+        <field name="arch" type="xml">
             <!-- Campo puente desde PT a PTAL para pasar material y filtrar valores: -->
-            <xpath expr="//field[@name='value_count']" position="after">
+            <xpath expr="//field[@name='partner_id']" position="after">
                 <field name="material_id" column_invisible="1"/>
             </xpath>
             <!-- Filtro de valores de atributo por material y partner, según el campo anterior: -->
@@ -130,8 +141,6 @@
                     ('material_id','=',material_id),
                     '|',('partner_id','=',False),('partner_id','=',partner_id)]</attribute>
             </xpath>
-
-
         </field>
     </record>
 
