--- a/partner_product_attribute_value/views/product_attribute_views.xml
+++ b/partner_product_attribute_value/views/product_attribute_views.xml
@@ -7,8 +7,9 @@
         <field name="type">form</field>
         <field name="inherit_id" ref="product.product_attribute_view_form"/>
         <field name="arch" type="xml">
-            <xpath expr="//field[@name='visibility']" position="after">
-                <field name="partner_filter" invisible="1"/>
+            <xpath expr="//page[@name='attribute_values']" position="inside">
+                <field name="partner_id" optional="hide"/>
+                <field name="material_id" optional="hide"/>
             </xpath>
         </field>
     </record>
