--- a/partner_product_attribute_value/views/product_attribute_views.xml
+++ b/partner_product_attribute_value/views/product_attribute_views.xml
@@ -2,14 +2,14 @@
 <odoo>
 
     <record id="product_partner_ptav_attribute_inh_form" model="ir.ui.view">
-        <field name="name">product.attribute.partner.ptav.inh.form</field>
+        <field name="name">product.partner.ptav.inh.form</field>
         <field name="model">product.attribute</field>
         <field name="type">form</field>
         <field name="inherit_id" ref="product.product_attribute_view_form"/>
         <field name="arch" type="xml">
-            <xpath expr="//field[@name='set_hidden']" position="after">
+            <field name="set_hidden" position="after">
                 <field name="partner_id" optional="hide"/>
-            </xpath>
+            </field>
         </field>
     </record>
 
