--- a/partner_product_attribute_value/views/product_attribute_views.xml
+++ b/partner_product_attribute_value/views/product_attribute_views.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
 
-    <record id="product_partner_ptav_attribute_inh_form" model="ir.ui.view">
-        <field name="name">product.partner.ptav.inh.form</field>
+    <record id="product_attribute_partner_ptav_inh_form" model="ir.ui.view">
+        <field name="name">product.attribute.partner.ptav.inh.form</field>
         <field name="model">product.attribute</field>
         <field name="type">form</field>
         <field name="inherit_id" ref="product.product_attribute_view_form"/>
         <field name="arch" type="xml">
-            <field name="set_hidden" position="after">
+            <xpath expr="//field[@name='value_ids']/tree" position="inside">
                 <field name="partner_id" optional="hide"/>
-            </field>
+            </xpath>
         </field>
     </record>
 
