--- a/shoes_dealer/views/product_template_views.xml
+++ b/shoes_dealer/views/product_template_views.xml
@@ -115,7 +115,9 @@
 
             <xpath expr="//field[@name='uom_po_id']" position="after">
                 <field name="material_id"/>
+                <!-- Ya va en otro módulo
                 <field name="manufacturer_id"/>
+                -->
                 <field name="pairs_sold"/>
             </xpath>
 
