--- a/shoes_dealer/views/product_template_views.xml
+++ b/shoes_dealer/views/product_template_views.xml
@@ -9,6 +9,12 @@
         <field name="priority">90</field>
         <field name="arch" type="xml">
 
+            <!-- Pestaña inicial para datos generales de productos y variantes, de shoes_dealer: -->
+            <xpath expr="//page[@name='general_information']" position="before">
+                <page name="shoes_delaer" string="Shoes dealer" groups="product.group_product_variant">
+                </page>
+            </xpath>
+
             <xpath expr="//group[@name='group_standard_price']/label" position="before">
                 <field invisible="product_tmpl_set_id" name="product_tmpl_single_id"/>
                 <field invisible="product_tmpl_single_id" name="product_tmpl_set_id"/>
