--- a/shoes_dealer/views/product_template_views.xml
+++ b/shoes_dealer/views/product_template_views.xml
@@ -17,12 +17,16 @@
 
                         </group>
                         <group>
-                            <field invisible="product_tmpl_set_id" name="product_tmpl_single_id"/>
-                            <field invisible="product_tmpl_single_id" name="product_tmpl_set_id"/>
-                            <field name="campaign_code" readonly="1"/>
+
                         </group>
                     </group>
                 </page>
+            </xpath>
+
+            <xpath expr="//group[@name='group_standard_price']/label" position="before">
+                <field invisible="product_tmpl_set_id" name="product_tmpl_single_id"/>
+                <field invisible="product_tmpl_single_id" name="product_tmpl_set_id"/>
+                <field name="campaign_code" readonly="1"/>
             </xpath>
 
         </field>
@@ -125,6 +129,9 @@
 
             <xpath expr="//field[@name='uom_po_id']" position="after">
                 <field name="material_id"/>
+                <!-- Ya va en otro módulo
+                <field name="manufacturer_id"/>
+                -->
                 <field name="pairs_sold"/>
             </xpath>
 
