--- a/shoes_dealer/views/product_template_views.xml
+++ b/shoes_dealer/views/product_template_views.xml
@@ -18,30 +18,26 @@
                             <field name="gender" readonly="is_pair"/>
                             <field name="manufacturer_id" readonly="is_pair"/>
                             <field name="material_id" readonly="is_pair"/>
-                            <field name="product_tmpl_single_list_price" invisible="not product_tmpl_single_id"/>
-                            <field name="exwork" invisible="product_tmpl_single_id"
-                                   options="{'currency_field':'exwork_currency_id'}"/>
-                            <field name="exwork_single" invisible="not product_tmpl_single_id"
-                                   options="{'currency_field':'exwork_currency_id'}"/>
-                            <field name="exwork_euro" invisible="product_tmpl_single_id"
-                                   options="{'currency_field':'currency_id'}"/>
-                            <field name="exwork_single_euro" invisible="not product_tmpl_single_id"
-                                   options="{'currency_field':'currency_id'}"/>
-                            <field name="shipping_price" invisible="product_tmpl_single_id"/>
-                            <field name="shipping_single_price" invisible="not product_tmpl_single_id"/>
+                            <!-- Campos comunes en pares y surtidos que han de ser replicados: -->
+                            <field name="shoes_pair_weight_id"/>
+                            <field name="shoes_hscode_id"/>
+                            <field name="campaign_code" readonly="1"/>
                         </group>
                         <group>
                             <field invisible="product_tmpl_set_id" name="product_tmpl_single_id"/>
                             <field invisible="product_tmpl_single_id" name="product_tmpl_set_id"/>
-                            <field name="campaign_code" readonly="1"/>
-                            <field name="pairs_sold"/>
-                            <!-- Campos comunes en pares y surtidos que han de ser replicados: -->
-                            <field name="shoes_pair_weight_id"/>
-                            <field name="shoes_hscode_id"/>
+                            <field name="product_tmpl_single_list_price" invisible="not product_tmpl_single_id"/>
+                            <field name="exwork" invisible="product_tmpl_single_id" options="{'currency_field':'exwork_currency_id'}"/>
+                            <field name="exwork_single" invisible="not product_tmpl_single_id" options="{'currency_field':'exwork_currency_id'}"/>
+                            <field name="exwork_euro" invisible="product_tmpl_single_id" options="{'currency_field':'currency_id'}"/>
+                            <field name="exwork_single_euro" invisible="not product_tmpl_single_id" options="{'currency_field':'currency_id'}"/>
+                            <field name="shipping_price" invisible="product_tmpl_single_id"/>
+                            <field name="shipping_single_price" invisible="not product_tmpl_single_id"/>
                             <!-- Campos requeridos, invisibles: -->
                             <field name="exwork_currency_id" invisible="1"/>
                             <field name="is_pair" invisible="1"/>
                             <field name="is_assortment" invisible="1"/>
+                            <field name="pairs_sold"/>
                         </group>
                     </group>
                 </page>
