--- a/shoes_dealer/views/product_template_views.xml
+++ b/shoes_dealer/views/product_template_views.xml
@@ -1,7 +1,7 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <odoo>
     <!-- VISTAS FORM COMUNES: -->
-    <record id="product_shoes_dealer_inh_form" model="ir.ui.view">
+    <record id="shoes_dealer_product_inh_form" model="ir.ui.view">
         <field name="name">product.shoes.dealer.inh.form</field>
         <field name="model">product.template</field>
         <field name="type">form</field>
@@ -19,8 +19,8 @@
                             <field name="manufacturer_id" readonly="is_pair"/>
                             <field name="material_id" readonly="is_pair"/>
                             <!-- Campos comunes en pares y surtidos que han de ser replicados: -->
-                            <field name="shoes_pair_weight_id"/>
-                            <field name="shoes_hscode_id"/>
+                            <field name="shoes_pair_weight_id" readonly="is_pair"/>
+                            <field name="shoes_hscode_id" readonly="is_pair"/>
                             <field name="campaign_code" readonly="1"/>
                         </group>
                         <group>
@@ -90,21 +90,6 @@
                         invisible="campaign_code">
                 </button>
             </xpath>
-
-            <!-- Se quita para poner en página shoes_dealer
-            <xpath expr="//div[@name='options']" position="after">
-                <div name="product_shoes_dealer">
-                    <span class="d-inline-block">
-                        <label for="shoes_campaign_id"/>
-                        <field name="shoes_campaign_id"/>
-                    </span>
-                    <span class="d-inline-block">
-                        <label for="gender"/>
-                        <field name="gender"/>
-                    </span>
-                </div>
-            </xpath>
-            -->
 
             <xpath expr="//group[@name='group_standard_price']/label" position="before">
                 <field name="product_tmpl_single_list_price" invisible="not product_tmpl_single_id"/>
