--- a/shoes_dealer/views/product_product_views.xml
+++ b/shoes_dealer/views/product_product_views.xml
@@ -62,7 +62,24 @@
         </field>
     </record>
 
-
+    <!-- VISTAS FORM SÓLO PRODUCT.PRODUCT: -->
+    <record id="product_product_shoes_dealer_inh_form" model="ir.ui.view">
+        <field name="name">product.product.shoes.dealer.inh.form</field>
+        <field name="model">product.product</field>
+        <field name="type">form</field>
+        <field name="inherit_id" ref="product.product_normal_form_view"/>
+        <field name="priority">90</field>
+        <field name="arch" type="xml">
+            <xpath expr="//page[@name='shoes_dealer']" position="inside">
+                <group>
+                    <field name="assortment_attribute_id" readonly="1" invisible="1"/>
+                    <field name="color_attribute_id" readonly="1" invisible="1"/>
+                    <field name="size_attribute_id" readonly="1"  invisible="1"/>
+                    <field name="assortment_pair_qty"/>
+                </group>
+            </xpath>
+        </field>
+    </record>
 
 
 </odoo>
