--- a/shoes_dealer/views/product_template_views.xml
+++ b/shoes_dealer/views/product_template_views.xml
@@ -11,28 +11,28 @@
 
             <!-- Pestaña inicial para datos generales de productos y variantes, de shoes_dealer: -->
             <xpath expr="//page[@name='general_information']" position="before">
-                <page name="shoes_delaer" string="Shoes dealer">
+                <page name="shoes_dealer" string="Shoes dealer">
                     <group>
                         <group>
-                            <field name="shoes_campaign_id" readonly="is_pair"/>
-                            <field name="gender" readonly="is_pair"/>
-                            <field name="manufacturer_id" readonly="is_pair"/>
-                            <field name="material_id" readonly="is_pair"/>
+                            <field name="shoes_campaign_id" readonly="is_pair or product_tmpl_set_id"/>
+                            <field name="gender" readonly="is_pair or product_tmpl_set_id"/>
+                            <field name="manufacturer_id" readonly="is_pair or product_tmpl_set_id"/>
+                            <field name="material_id" readonly="is_pair or product_tmpl_set_id"/>
                             <!-- Campos comunes en pares y surtidos que han de ser replicados: -->
-                            <field name="shoes_pair_weight_id" readonly="is_pair"/>
-                            <field name="shoes_hscode_id" readonly="is_pair"/>
+                            <field name="shoes_pair_weight_id" readonly="is_pair or product_tmpl_set_id"/>
+                            <field name="shoes_hscode_id" readonly="is_pair or product_tmpl_set_id"/>
                             <field name="campaign_code" readonly="1"/>
                         </group>
                         <group>
-                            <field invisible="product_tmpl_set_id" name="product_tmpl_single_id"/>
-                            <field invisible="product_tmpl_single_id" name="product_tmpl_set_id"/>
+                            <field name="product_tmpl_single_id" invisible="product_tmpl_set_id" domain="[('is_pair', '=', True)]" readonly="product_tmpl_set_id"/>
+                            <field name="product_tmpl_set_id" invisible="product_tmpl_single_id" domain="[('is_assortment', '=', True)]" readonly="product_tmpl_set_id"/>
                             <field name="product_tmpl_single_list_price" invisible="not product_tmpl_single_id"/>
-                            <field name="exwork" invisible="product_tmpl_single_id" options="{'currency_field':'exwork_currency_id'}"/>
-                            <field name="exwork_single" invisible="not product_tmpl_single_id" options="{'currency_field':'exwork_currency_id'}"/>
+                            <field name="exwork" invisible="product_tmpl_single_id" options="{'currency_field':'exwork_currency_id'}" readonly="product_tmpl_set_id"/>
+                            <field name="exwork_single" invisible="not product_tmpl_single_id" options="{'currency_field':'exwork_currency_id'}" readonly="product_tmpl_set_id"/>
                             <field name="exwork_euro" invisible="product_tmpl_single_id" options="{'currency_field':'currency_id'}"/>
                             <field name="exwork_single_euro" invisible="not product_tmpl_single_id" options="{'currency_field':'currency_id'}"/>
-                            <field name="shipping_price" invisible="product_tmpl_single_id"/>
-                            <field name="shipping_single_price" invisible="not product_tmpl_single_id"/>
+                            <field name="shipping_price" invisible="product_tmpl_single_id" readonly="product_tmpl_set_id"/>
+                            <field name="shipping_single_price" invisible="not product_tmpl_single_id" readonly="product_tmpl_set_id"/>
                             <!-- Campos requeridos, invisibles: -->
                             <field name="exwork_currency_id" invisible="1"/>
                             <field name="is_pair" invisible="1"/>
@@ -78,7 +78,7 @@
                         groups="sales_team.group_sale_salesman_all_leads">
                 </button>
 
-                 <button name="update_shoes_model_bom" string="Update BOM" type="object"
+                <button name="update_shoes_model_bom" string="Update BOM" type="object"
                         icon="fa-play" class="oe_stat_button"
                         invisible="not product_tmpl_single_id or not is_assortment"
                         groups="sales_team.group_sale_salesman_all_leads">
@@ -104,8 +104,7 @@
                 <field name="shipping_price" invisible="product_tmpl_single_id"/>
                 <field name="shipping_single_price" invisible="not product_tmpl_single_id"/>
                 <!-- Campos comunes en pares y surtidos que han de ser replicados: -->
-                <field name="shoes_pair_weight_id"/>
-                <field name="shoes_hscode_id"/>
+
 
                 <!-- Campos requeridos, invisibles: -->
                 <field name="exwork_currency_id" invisible="1"/>
@@ -115,8 +114,8 @@
             </xpath>
 
             <!-- Nombre readonly si es par -->
-             <xpath expr="//field[@name='name']" position="attributes">
-                 <attribute name="readonly">is_pair</attribute>
+            <xpath expr="//field[@name='name']" position="attributes">
+                <attribute name="readonly">is_pair</attribute>
             </xpath>
 
             <!-- Ocultar el list_price en product.template si tiene par asignado: -->
@@ -125,14 +124,6 @@
             </xpath>
             <xpath expr="//field[@name='list_price']" position="attributes">
                 <attribute name="invisible">product_tmpl_single_id</attribute>
-            </xpath>
-
-            <xpath expr="//field[@name='uom_po_id']" position="after">
-                <field name="material_id"/>
-                <!-- Ya va en otro módulo
-                <field name="manufacturer_id"/>
-                -->
-                <field name="pairs_sold"/>
             </xpath>
 
         </field>
@@ -160,44 +151,6 @@
             </xpath>
         </field>
     </record>
-
-    <!-- VISTAS FORM SÓLO PRODUCT.PRODUCT: -->
-    <record id="product_product_shoes_dealer_inh_form" model="ir.ui.view">
-        <field name="name">product.product.shoes.dealer.inh.form</field>
-        <field name="model">product.product</field>
-        <field name="type">form</field>
-        <field name="inherit_id" ref="product.product_normal_form_view"/>
-        <field name="priority">90</field>
-        <field name="arch" type="xml">
-            <xpath expr="//div[@name='options']" position="after">
-                <div name="product_shoes_dealer">
-                    <span class="d-inline-block">
-                        <label for="shoes_campaign_id"/>
-                        <field name="shoes_campaign_id" readonly="1"/>
-                    </span>
-                    <span class="d-inline-block" invisible="not gender">
-                        <label for="gender"/>
-                        <field name="gender" readonly="1"/>
-                    </span>
-                    <span class="d-inline-block" invisible="product_tmpl_set_id">
-                        <label for="product_tmpl_single_id"/>
-                        <field name="product_tmpl_single_id" readonly="1"/>
-                    </span>
-                    <span class="d-inline-block" invisible="product_tmpl_single_id">
-                        <label for="product_tmpl_set_id"/>
-                        <field name="product_tmpl_set_id" readonly="1"/>
-                    </span>
-                </div>
-            </xpath>
-            <xpath expr="//field[@name='uom_po_id']" position="after">
-                <field name="material_id" readonly="1"/>
-                <field name="manufacturer_id" readonly="1"/>
-                <field name="color_attribute_id" readonly="1"/>
-                <field name="size_attribute_id" readonly="1"/>
-            </xpath>
-        </field>
-    </record>
-
 
     <!-- VISTAS DE BÚSQUEDA: -->
     <record id="product_template_shoes_dealer_inh_search" model="ir.ui.view">
