--- a/shoes_dealer/views/product_template_views.xml
+++ b/shoes_dealer/views/product_template_views.xml
@@ -24,8 +24,8 @@
                             <field name="campaign_code" readonly="1"/>
                         </group>
                         <group>
-                            <field name="product_tmpl_single_id" invisible="product_tmpl_set_id" domain="[('is_pair', '=', True)]" readonly="product_tmpl_set_id"/>
-                            <field name="product_tmpl_set_id" invisible="product_tmpl_single_id" domain="[('is_assortment', '=', True)]" readonly="product_tmpl_set_id"/>
+                            <field name="product_tmpl_single_id" invisible="not is_assortment" domain="[('is_pair', '=', True)]" readonly="product_tmpl_set_id"/>
+                            <field name="product_tmpl_set_id" invisible="not is_pair" domain="[('is_assortment', '=', True)]" readonly="product_tmpl_set_id"/>
                             <field name="product_tmpl_single_list_price" invisible="not product_tmpl_single_id"/>
                             <field name="exwork" invisible="product_tmpl_single_id" options="{'currency_field':'exwork_currency_id'}" readonly="product_tmpl_set_id"/>
                             <field name="exwork_single" invisible="not product_tmpl_single_id" options="{'currency_field':'exwork_currency_id'}" readonly="product_tmpl_set_id"/>
