--- a/shoes_dealer/views/purchase_order_views.xml
+++ b/shoes_dealer/views/purchase_order_views.xml
@@ -27,8 +27,9 @@
                 <field name="pairs_count"/>
             </field>
             <xpath expr="//page/field[@name='order_line']/tree/field[@name='price_unit']" position="after">
-                <field name="pairs_count"/>
-                <field name="pair_price"/>
+                <field name="pairs_count" optional="hide"/>
+                <field name="pair_price" optional="show"/>
+                <field name="assortment_pair_id" optional="hide"/>
             </xpath>
             <field name="notes" position="before">
                 <field name="pairs_count"/>
