--- a/shoes_dealer/views/assortment_pair_views.xml
+++ b/shoes_dealer/views/assortment_pair_views.xml
@@ -26,6 +26,7 @@
         <field name="parent_id" ref="stock.menu_product_in_config_stock"/>
         <field name="sequence">110</field>
         <field name="web_icon" eval="False"/>
+        <field name="groups_id" eval="[(6, 0, [ref('base.group_no_one')])]"/>
     </record>
 
 
