--- a/shoes_dealer/views/project_project_views.xml
+++ b/shoes_dealer/views/project_project_views.xml
@@ -10,6 +10,7 @@
         <field name="arch" type="xml">
 
             <xpath expr="//field[@name='user_id']" position="after">
+                <field name="brand_id"/>
                 <field name="currency_exchange" required="1"/>
                 <field name="campaign_code" readonly="1"/>
             </xpath>
