--- a/shoes_dealer_campaign/views/project_project_views.xml
+++ b/shoes_dealer_campaign/views/project_project_views.xml
@@ -2,16 +2,15 @@
 <odoo>
 
     <!-- Partner customization & migration fields : -->
-    <record id="shoes_dealer_project_inh_form" model="ir.ui.view">
-        <field name="name">shoes.dealer.project.inh.form</field>
+    <record id="shoes_dealer_campaign_project_inh_form" model="ir.ui.view">
+        <field name="name">shoes.dealer.campaign.project.inh.form</field>
         <field name="model">project.project</field>
         <field name="type">form</field>
         <field name="inherit_id" ref="project.edit_project"/>
         <field name="arch" type="xml">
 
-            <xpath expr="//field[@name='user_id']" position="after">
-                <field name="currency_exchange" required="1"/>
-                <field name="campaign_code" readonly="1"/>
+            <xpath expr="//field[@name='tag_ids']" position="after">
+                <field name="brand_id"/>
             </xpath>
 
         </field>
