--- a/shoes_dealer_campaign/views/project_project_views.xml
+++ b/shoes_dealer_campaign/views/project_project_views.xml
@@ -10,6 +10,7 @@
         <field name="arch" type="xml">
 
             <xpath expr="//field[@name='tag_ids']" position="after">
+                <field name="is_shoes_campaign"/>
                 <field name="brand_id"/>
             </xpath>
 
