--- a/shoes_dealer_campaign/views/project_task_views.xml
+++ b/shoes_dealer_campaign/views/project_task_views.xml
@@ -25,6 +25,10 @@
                 <field name="is_shoes_campaign" invisible="1"/>
             </xpath>
 
+            <xpath expr="//field[@name='date_deadline']" position="after">
+                <field name="product_tmpl_id" invisible="not is_shoes_campaign"/>
+            </xpath>
+
         </field>
         <field name="priority">99</field>
     </record>
