--- a/shoes_campaign/views/project_project_views.xml
+++ b/shoes_campaign/views/project_project_views.xml
@@ -29,7 +29,7 @@
             <xpath expr="//field[@name='user_id']" position="after">
                 <group name="shoes_campaign">
                     <field name="is_shoes_campaign"/>
-                    <field name="brand_id"/>
+                    <field name="product_brand_id"/>
                 </group>
             </xpath>
 
