--- a/shoes_campaign/views/project_task_views.xml
+++ b/shoes_campaign/views/project_task_views.xml
@@ -9,10 +9,14 @@
         <field name="inherit_id" ref="project.view_task_form2"/>
         <field name="arch" type="xml">
 
+            <xpath expr="//header" position="inside">
+                <button string="Create product" name="create_shoe_model" type="object"
+                        invisible="not is_shoes_campaign or product_tmpl_id"/>
+            </xpath>
             <xpath expr="//field[@name='description']" position="before">
                 <group name="shoes_dealer_campaign" invisible="not is_shoes_campaign">
                     <group>
-                        <field name="brand_id"/>
+                        <field name="product_brand_id"/>
                         <field name="manufacturer_id"/>
                         <field name="material_id"/>
                     </group>
