--- a/shoes_campaign/views/project_task_views.xml
+++ b/shoes_campaign/views/project_task_views.xml
@@ -11,7 +11,7 @@
 
             <xpath expr="//header" position="inside">
                 <button string="Create product" name="create_shoe_model" type="object"
-                        invisible="not is_shoes_campaign or product_tmpl_id"/>
+                        invisible="not is_shoes_campaign or shoes_product_tmpl_id"/>
             </xpath>
             <xpath expr="//field[@name='description']" position="before">
                 <group name="shoes_dealer_campaign" invisible="not is_shoes_campaign">
@@ -30,7 +30,7 @@
             </xpath>
 
             <xpath expr="//field[@name='date_deadline']" position="after">
-                <field name="product_tmpl_id" invisible="not is_shoes_campaign"/>
+                <field name="shoes_product_tmpl_id" invisible="not is_shoes_campaign"/>
             </xpath>
 
         </field>
