--- a/shoes_campaign/views/project_task_views.xml
+++ b/shoes_campaign/views/project_task_views.xml
@@ -2,7 +2,7 @@
 <odoo>
 
     <!-- Task customization : -->
-    <record id="shoes_dealer_campaign_task_inh_form" model="ir.ui.view">
+    <record id="shoes_campaign_task_inh_form" model="ir.ui.view">
         <field name="name">shoes.dealer.campaign.task.inh.form</field>
         <field name="model">project.task</field>
         <field name="type">form</field>
@@ -29,7 +29,7 @@
                 <field name="is_shoes_campaign" invisible="1"/>
             </xpath>
 
-            <xpath expr="//field[@name='date_deadline']" position="after">
+            <xpath expr="//field[@name='active']" position="after">
                 <field name="shoes_product_tmpl_id" invisible="not is_shoes_campaign"/>
             </xpath>
 
