--- a/shoes_campaign/views/project_task_views.xml
+++ b/shoes_campaign/views/project_task_views.xml
@@ -30,7 +30,7 @@
             </xpath>
 
             <xpath expr="//field[@name='active']" position="after">
-                <field name="shoes_product_tmpl_id" invisible="not is_shoes_campaign"/>
+                <field name="shoes_product_tmpl_id" domain="[('detailed_type','=','product')]" invisible="not is_shoes_campaign"/>
             </xpath>
 
         </field>
