--- a/shoes_dealer/views/stock_lot_views.xml
+++ b/shoes_dealer/views/stock_lot_views.xml
@@ -7,10 +7,10 @@
         <field name="type">form</field>
         <field name="inherit_id" ref="stock.view_production_lot_form"/>
         <field name="arch" type="xml">
-            <field name="ref" position="after">
+            <xpath expr="//group/group[2]" position="inside">
                 <field name="assortment_pair"/>
                 <field name="pairs_count"/>
-            </field>
+            </xpath>
         </field>
     </record>
 
