--- a/shoes_dealer/views/stock_lot_views.xml
+++ b/shoes_dealer/views/stock_lot_views.xml
@@ -8,7 +8,7 @@
         <field name="inherit_id" ref="stock.view_production_lot_form"/>
         <field name="arch" type="xml">
             <xpath expr="//group/group[2]" position="inside">
-                <field name="assortment_pair"/>
+                <field name="assortment_pair" readonly="1"/>
                 <field name="pairs_count"/>
             </xpath>
         </field>
