--- a/shoes_campaign/views/project_project_views.xml
+++ b/shoes_campaign/views/project_project_views.xml
@@ -12,6 +12,7 @@
             <xpath expr="//field[@name='tag_ids']" position="after">
                 <field name="is_shoes_campaign"/>
                 <field name="product_brand_id"/>
+                <field name="task_code_prefix"/>
             </xpath>
 
         </field>
@@ -30,6 +31,7 @@
                 <group name="shoes_campaign">
                     <field name="is_shoes_campaign"/>
                     <field name="product_brand_id"/>
+                    <field name="task_code_prefix"/>
                 </group>
             </xpath>
 
