--- a/shoes_campaign/views/project_project_views.xml
+++ b/shoes_campaign/views/project_project_views.xml
@@ -11,8 +11,8 @@
 
             <xpath expr="//field[@name='tag_ids']" position="after">
                 <field name="is_shoes_campaign"/>
-                <field name="product_brand_id"/>
-                <field name="task_code_prefix"/>
+                <field name="product_brand_id" required="is_shoes_campaign"/>
+                <field name="task_code_prefix" required="is_shoes_campaign"/>
             </xpath>
 
         </field>
@@ -30,8 +30,8 @@
             <xpath expr="//field[@name='user_id']" position="after">
                 <group name="shoes_campaign">
                     <field name="is_shoes_campaign"/>
-                    <field name="product_brand_id"/>
-                    <field name="task_code_prefix"/>
+                    <field name="product_brand_id" required="is_shoes_campaign"/>
+                    <field name="task_code_prefix" required="is_shoes_campaign"/>
                 </group>
             </xpath>
 
