--- a/shoes_campaign/views/project_task_views.xml
+++ b/shoes_campaign/views/project_task_views.xml
@@ -26,7 +26,7 @@
                 <group name="shoes_dealer_campaign" invisible="not is_shoes_campaign">
                     <group>
                         <field name="product_brand_id"/>
-                        <field name="code"/>
+                        <field name="code" readonly="code"/>
                         <field name="manufacturer_id"/>
                         <field name="material_id"/>
                     </group>
