--- a/shoes_campaign/views/project_task_views.xml
+++ b/shoes_campaign/views/project_task_views.xml
@@ -31,6 +31,7 @@
                         <field name="material_id"/>
                     </group>
                     <group>
+                        <field name="shoes_shape_id"/>
                         <field name="gender"/>
                         <field name="shoes_pair_weight_id"/>
                         <field name="shoes_hscode_id"/>
