--- a/product_attribute_value_group/views/product_attribute_views.xml
+++ b/product_attribute_value_group/views/product_attribute_views.xml
@@ -9,6 +9,7 @@
         <field name="arch" type="xml">
             <xpath expr="//field[@name='value_ids']/tree" position="inside">
                 <field name="group_id" optional="show" context="{'default_attribute_id':attribute_id}"/>
+                <field name="attribute_id" column_invisible="1"/>
             </xpath>
         </field>
     </record>
