--- a/shoes_dealer/views/assortment_pair_views.xml
+++ b/shoes_dealer/views/assortment_pair_views.xml
@@ -23,7 +23,7 @@
         <field name="action" ref="action_assortment_pair"/>
         <field name="active" eval="True"/>
         <field name="name">Assortment pair</field>
-        <field name="parent_id" ref="stock.menu_product_in_config_stock"/>
+        <field name="parent_id" ref="shoes_dealer.inventory_shoes_dealer_menu"/>
         <field name="sequence">110</field>
         <field name="web_icon" eval="False"/>
         <field name="groups_id" eval="[(6, 0, [ref('base.group_no_one')])]"/>
