--- a/shoes_dealer/views/product_material_views.xml
+++ b/shoes_dealer/views/product_material_views.xml
@@ -23,7 +23,7 @@
         <field name="action" ref="action_product_material"/>
         <field name="active" eval="True"/>
         <field name="name">Product materials</field>
-        <field name="parent_id" ref="stock.menu_product_in_config_stock"/>
+        <field name="parent_id" ref="shoes_dealer.inventory_shoes_dealer_menu"/>
         <field name="sequence">100</field>
         <field name="web_icon" eval="False"/>
     </record>
