--- a/shoes_dealer/views/shoes_shape_views.xml
+++ b/shoes_dealer/views/shoes_shape_views.xml
@@ -23,7 +23,7 @@
         <field name="action" ref="shoes_shape_act_window"/>
         <field name="active" eval="True"/>
         <field name="name">Shoes shapes</field>
-        <field name="parent_id" ref="stock.menu_product_in_config_stock"/>
+        <field name="parent_id" ref="shoes_dealer.inventory_shoes_dealer_menu"/>
         <field name="sequence">110</field>
         <field name="web_icon" eval="False"/>
     </record>
